// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`error: service for non existent stait 1`] = `
"error TS2344: Type '\\"stait2\\"' does not satisfy the constraint '\\"stait1\\"'.
"
`;

exports[`type: multiple staits 1`] = `
"type multiple_staits =
  () => MaybePromise<{
    type: 'stait2'
    context: {
      data1: string
      data2: 123
    }
  }>
"
`;

exports[`type: recursive service depth 1 1`] = `
"type recursive_service_depth_1 =
  () => MaybePromise<{
    type: 'stait1'
    service: any
  }>
"
`;

exports[`type: recursive service depth 2 1`] = `
"type recursive_service_depth_2 =
  () => MaybePromise<{
    type: 'stait1'
    service: any
  }>
"
`;

exports[`type: recursive service depth 2 equals depth 1 1`] = `
"type recursive_service_depth_2_equals_depth_1 =
  true
"
`;

exports[`type: with context in args 1`] = `
"type with_context_in_args =
  true
"
`;

exports[`type: without context in args 1`] = `
"type without_context_in_args =
  true
"
`;
